--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = vendor/imgui
 	url = https://github.com/ocornut/imgui.git
 	branch = docking
+[submodule "vendor/httplib"]
+	path = vendor/httplib
+	url = https://github.com/yhirose/cpp-httplib.git
